[package]
name = "prefix-manager"
version = "0.0.1" # https://crates.io/crates/prefix-manager
edition = "2021"
rust-version = "1.62"
publish = true
description = "Rust prefix manager"
repository = "https://github.com/gyuho/prefix-manager"
readme = "README.md"
license = "Apache-2.0"

[dependencies]

[dev-dependencies]
